--- a/novel.ipynb
+++ b/novel.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "\n",
     "**Given U, find f(U) privately, where f = Double ReLU**\n",
@@ -11,35 +10,34 @@
     "- f(z) = 0, if z < -1/2\n",
     "- f(z) = z + 1/2, if -1/2 < z < 1/2\n",
     "- f(z) = 1, if z > 1/2"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
    "source": [
     "# Beavers Triplet Generation\n",
     "\n",
     "u = 3\n",
     "v = 4\n",
     "z = u * v\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
    "source": [
     "import random"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
    "source": [
     "def multiply(i,a,b,e,f,z):\n",
     "    #e = a - u\n",
@@ -49,13 +47,13 @@
     "    else:\n",
     "        c = -e*f + a*f + b*e + z\n",
     "    return c\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
    "source": [
     "def share(a):\n",
     "    r = random.randint(0,8)\n",
@@ -65,22 +63,13 @@
     "\n",
     "def rec(a,b):\n",
     "    return a+b"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "N0 = 8, N1 = 2\n",
-      "M0 = 0, M1 = 12\n"
-     ]
-    }
-   ],
+   "execution_count": 6,
    "source": [
     "num1 = 10\n",
     "num2 = 12\n",
@@ -89,22 +78,22 @@
     "print(f\"N0 = {n0}, N1 = {n1}\")\n",
     "m0, m1 = share(num2)\n",
     "print(f\"M0 = {m0}, M1 = {m1}\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "N0 = 8, N1 = 2\n",
+      "M0 = 7, M1 = 5\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 176,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "65\n",
-      "55\n"
-     ]
-    }
-   ],
    "source": [
     "z0, z1 = share(z)\n",
     "e = num1 - u\n",
@@ -114,49 +103,39 @@
     "print(nm0)\n",
     "nm1 = multiply(1,n1,m1,e,f,z1)\n",
     "print(nm1)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "65\n",
+      "55\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 177,
-   "metadata": {},
+   "source": [
+    "print(rec(nm0,nm1))"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "120\n"
      ]
     }
    ],
-   "source": [
-    "print(rec(nm0,nm1))"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 209,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "121.5\n",
-      "2\n",
-      "357.5\n",
-      "-110.5\n",
-      "theta: 123, rdelta: 247.0\n",
-      "122.5\n",
-      "4\n",
-      "126.5\n",
-      "126.5\n",
-      "========================\n",
-      "theta: 123, out: 1\n"
-     ]
-    }
-   ],
    "source": [
     "#theta = random.uniform(-3,3)\n",
     "out = 0\n",
@@ -206,28 +185,48 @@
     "\n",
     "print(f\"========================\")\n",
     "print(f\"theta: {theta}, out: {out}\")\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2\n",
+      "121.5\n",
+      "2\n",
+      "357.5\n",
+      "-110.5\n",
+      "theta: 123, rdelta: 247.0\n",
+      "122.5\n",
+      "4\n",
+      "126.5\n",
+      "126.5\n",
+      "========================\n",
+      "theta: 123, out: 1\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.10 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -240,6 +239,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
+  },
+  "interpreter": {
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
   }
  },
  "nbformat": 4,
